指标获取脚本